--- a/tes.css
+++ b/tes.css
@@ -29,39 +29,7 @@ body{
     text-align: center;
     
 }
-#header h2{
-    background-image: url("FaceApp_1659302653115.jpg");
-    border-radius: 50px 50px 50px 50px;
-    background-repeat: no-repeat;
-    background-size:cover;
-    height: 150px;
-    width: 150px;
-    margin: 0 0 0 9.5%;
-}
-#menu {
-    clear: both;
-    padding: 0; margin: 0 0 25px 25px;
-}
-#menu ul{
-    float: left;
-    border: none;
-    list-style: none;
-    font: bold 14px Arial;
-    padding: 0 0 0 50%;
-}
-#menu ul li{
-    display: inline;
-}
-#menu ul li a{
-    padding-right: 16px;
-    border-bottom: 4px solid orange;
-}
-#menu ul li a:hover {
-    border-bottom: 4px solid red;
-}
-#menu ul li a.aktif{
-    border-bottom: 4px solid gray;
-}
+
 #footer{
     position: relative;
     clear: both;
@@ -76,44 +44,71 @@ body{
     bottom: 10px;
     position: absolute;
 }
+
+#gambar h1{ 
+        float: left;
+        background-image: url("wallhaven-v9w635.jpg");
+        background-repeat: no-repeat;
+        background-size:cover;
+        height: 50%;
+        width: 50%;
+}
 #content{
+    position: relative;
     float: left;
     width: 30%;
     text-align: center;
-    padding: 70px 100% 0 0;
+    padding: 100px 10% 10% 10%;
     font-size: medium;
 }
+
+
 #content h1{
     margin-bottom: 5px;
     text-align: center;
 }
-#Center{
-    float: left;
-    border: 2px solid white;
-    margin: -8% 0 0 24%;
-    padding: 0 20% 10% 10%;
-    width: 30%;
-    height: 30%;
-}
-#side{
-    border: 1px solid #ccc;
-    float: right;
-    margin: 2px;
-    width: 250px;
-    padding: 2px;
-    height: 150px;
-    width: 150px;
-}
-#side h1{
-    border-bottom: 1px solid #ccc;
-    padding: 3px;
-    color: #333;
-    text-align: center;
-}
-#side p{
-    border: 1px solid #ccc;
-    padding: 4px;
-}
-a {text-decoration: none; color: #666;}
-a:visited {color: #666;}
 
+#portofolio{
+    position: relative;
+    float: left;
+    text-align: center;
+    padding: 0 0 0 45%;
+    margin: 0 0 0 0;
+    font-size: medium
+}
+
+#tib{
+    clear: both;
+    background-image: url("wallhaven-dg6l9j.png");
+    background-repeat: no-repeat;
+    background-size:cover;
+    height: 100%;
+}
+#tib h1{
+    font-size: 50px;
+    font-family: arial;
+    color: white;
+    margin: 14px 6px 4px 8px;
+    text-align: center;
+    padding: 10% 0 5% 0;
+}
+#tib h2{
+    height: 10%;
+    width: 10%;
+    text-align: center;
+    margin: 0 0 0 25%;
+}
+#tib svg{
+    object-position: center;
+    margin: 0% 0 0 20%;
+    height: 60%;
+    width: 60%;
+}
+#box {
+    width: 10%;
+    height: 20%;
+    background-color: white;
+    margin-top: 10%;
+    margin-left: 10%;
+    margin: 0 0 0 60%;
+}
